--- a/src/scss/theme.scss
+++ b/src/scss/theme.scss
@@ -1,6 +1,20 @@
 @import 'charset';
 @import 'bs4_variables.scss.liquid';
-@import 'fixes';
-@import 'custom';
+
 @import "../../bower_components/sass-autoprefixer/scss/prefixes";
+@import '../../bower_components/jumplink-components/scss/fixes';
 @import "../../bower_components/bootstrap-backward/scss/bootstrap";
+
+@import '../../bower_components/jumplink-components/scss/utilities';
+@import '../../bower_components/jumplink-components/scss/iconset';
+@import '../../bower_components/jumplink-components/scss/styleicons';
+@import '../../bower_components/jumplink-components/scss/modal';
+@import '../../bower_components/jumplink-components/scss/border';
+@import '../../bower_components/jumplink-components/scss/images';
+@import '../../bower_components/jumplink-components/scss/positions';
+@import '../../bower_components/jumplink-components/scss/colors';
+
+@import 'layout';
+@import 'fonts.scss.liquid';
+@import 'navbar';
+@import 'sidebar';
