--- a/src/scss/theme.scss
+++ b/src/scss/theme.scss
@@ -13,6 +13,7 @@
 @import '../../bower_components/jumplink-components/scss/images';
 @import '../../bower_components/jumplink-components/scss/positions';
 @import '../../bower_components/jumplink-components/scss/colors';
+@import '../../bower_components/jumplink-components/scss/efects';
 
 @import 'layout';
 @import 'fonts.scss.liquid';
@@ -20,3 +21,4 @@
 @import 'sidebar';
 @import 'images';
 @import 'list-collections';
+@import 'pagination';
