--- a/theme/snippets/navbar.liquid
+++ b/theme/snippets/navbar.liquid
@@ -1,7 +1,8 @@
 <nav class="navbar fixed-top navbar-toggleable-md navbar-light bg-white border-b border-px-1 border-color-gray-lighter" id="main-navbar">
 
-  <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="sidebar" data-target="#right-sidebar" aria-controls="right-sidebar" aria-expanded="false" aria-label="Toggle Sidebar">
-    <span class="navbar-toggler-icon"></span>
+  <button class="navbar-toggler navbar-toggler-right sidebar-toggler tcon tcon-menu--xcross" type="button" data-toggle="sidebar" data-target="#right-sidebar" aria-controls="right-sidebar" aria-expanded="false" aria-label="Toggle Sidebar">
+    <span class="tcon-menu__lines" aria-hidden="true"></span>
+    <span class="tcon-visuallyhidden">toggle menu</span>
   </button>
 
   <div class="container">
