--- a/theme/snippets/pagination.liquid
+++ b/theme/snippets/pagination.liquid
@@ -1,46 +1,39 @@
 {% if paginate.pages > 1 %}
   <div data-pagination-wrapper="true" class="row pagination-wrapper">
-    <div class="col-xs-12 text-center">
-      <nav class="border-top m-y-05">
-        <ul class="pagination pagination-active-number pull-left m-y-05">
-          {% if paginate.previous.is_link %}
-            <li>
-              <a class="no-border" href="{{ paginate.previous.url }}{{paginate_hash}}">
-                <span class="hidden-xs">&#60; Vorherige Seite</span>
-                <span class="hidden-sm hidden-md hidden-lg">&#60;</span>
-              </a>
-            </li>
-          {% endif %}
-        </ul>
-        <ul class="pagination pagination-active-number m-y-05">
+    <div class="col-xs-12">
+      <nav aria-label="Page navigation" class="">
+
+        <ul class="pagination justify-content-center">
+
+          <li class="page-item {% unless paginate.previous.is_link %}disabled{% endunless %}">
+            <a class="page-link" href="{{ paginate.previous.url }}{{paginate_hash}}" {% unless paginate.next.is_link %}disabled="disabled"{% endunless %} aria-label="{{ 'general.paginate.prev_label' | t }}">
+              {% include 'iconset', name: 'arrow', direction: 'left' %}
+              <span class="sr-only">{{ 'general.paginate.prev_label' | t }}</span>
+            </a>
+          </li>
+          
           {% for part in paginate.parts %}
-            {% if part.is_link %}
-              <li>
-                <a class="no-border" href="{{part.url}}{{paginate_hash}}">{{ part.title }}</a>
-              </li>
-            {% else %}
-              <li class="active">
-                <a class="no-border" href="{{part.url}}{{paginate_hash}}">{{ part.title }}</a>
-              </li>
-            {% endif %}
+            <li class="page-item {% unless part.is_link %}active{% endunless %}">
+              <a class="page-link" href="{{part.url}}{{paginate_hash}}">{{ part.title }}</a>
+            </li>
           {% endfor %}
+
           {% if show_all_active %}
-            <li class="">
-              <a class="no-border" data-onclick-load-all="true" href="{{collection.url}}?page=all">
-                {{ 'collection.paginate.all' | t }}
+            <li class="page-item">
+              <a class="page-link" data-onclick-load-all="true" href="{{collection.url}}?page=all" aria-label="{{ 'general.paginate.all_label' | t }}">
+                <span aria-hidden="true">{{ 'general.paginate.all' | t }}</span>
+                <span class="sr-only">{{ 'general.paginate.all_label' | t }}</span>
               </a>
             </li>
           {% endif %}
-        </ul>
-        <ul class="pagination pagination-active-number pull-right m-y-05">
-          {% if paginate.next.is_link %}
-            <li>
-              <a class="no-border" href="{{ paginate.next.url }}{{paginate_hash}}">
-                <span class="hidden-xs">Nächste Seite &#62;</span>
-                <span class="hidden-sm hidden-md hidden-lg">&#62;</span>
-              </a>
-            </li>
-          {% endif %}
+
+          <li class="page-item {% unless paginate.next.is_link %}disabled{% endunless %}">
+            <a class="page-link" {% unless paginate.next.is_link %}disabled="disabled"{% endunless %} href="{{ paginate.next.url }}{{paginate_hash}}" aria-label="{{ 'general.paginate.next_label' | t }}">
+              {% include 'iconset', name: 'arrow', direction: 'right' %}
+              <span class="sr-only">{{ 'general.paginate.next_label' | t }}</span>
+            </a>
+          </li>
+
         </ul>
       </nav>
     </div>
