--- a/theme/templates/list-collections.liquid
+++ b/theme/templates/list-collections.liquid
@@ -8,7 +8,7 @@
         </div>
       {% endfor %}
     </div>
-    {% include 'pagination' %}
+    {% include 'pagination', show_all_active: false %}
   {% endpaginate %}
   
 </div>
