fotter with animation

--- a/src/scss/theme-test.scss
+++ b/src/scss/theme-test.scss
@@ -14,6 +14,8 @@
 @import '../../bower_components/jumplink-components/scss/positions';
 @import '../../bower_components/jumplink-components/scss/colors';
 @import '../../bower_components/jumplink-components/scss/efects';
+@import '../../bower_components/jumplink-components/scss/backgrounds';
+@import '../../bower_components/jumplink-components/scss/navbar';
 
 @import 'layout';
 // import 'fonts.scss.liquid';
@@ -22,3 +24,4 @@
 @import 'images';
 @import 'list-collections';
 @import 'pagination';
+@import 'footer';
