--- a/theme/snippets/iconset.liquid
+++ b/theme/snippets/iconset.liquid
@@ -15,6 +15,6 @@
     {% assign class = 'rotate-90 flip-v' %}
 {% endif %}
 
-<div aria-hidden="true" class="iconset {{class}}">
+<div aria-hidden="true" class="iconset {{name}} {{direction}} {{class}} {{color}}">
     {% include snippet %}
 </div>
