--- a/src/scss/_navbar.scss
+++ b/src/scss/_navbar.scss
@@ -7,3 +7,11 @@
         }
     }
 }
+
+.footer-navbar {
+    .nav-item {
+        .nav-link {
+            text-transform: uppercase;
+        }
+    }
+}
