--- a/theme/assets/theme.scss.liquid
+++ b/theme/assets/theme.scss.liquid
@@ -10542,6 +10542,34 @@ $bp: xl;
   }
 }
 
+$font-path:        "./fonts" !default;
+$slick-font-path:  $font-path;
+$slick-font-family: "";
+$slick-loader-path: "./images" !default;
+$slick-arrow-color: $black;
+$slick-dot-color: $black;
+$slick-dot-color-active: $black;
+$slick-prev-character: ""; // $fa-var-chevron-left; // "←" !default;
+$slick-next-character: ""; // $fa-var-chevron-right; // "→" !default;
+$slick-dot-character: ""; // $fa-var-circle-o; // $fa-var-circle-thin;
+$slick-active-dot-character: ""; // $fa-var-circle; // "•" !default;
+$slick-dot-size: 0;
+$slick-opacity-default: 1;
+$slick-opacity-on-hover: 1;
+$slick-opacity-not-active: 1;
+$slick-arrow-opacity-on-hover: 1;
+$slick-arrow-opacity-disabled: 0.4;
+
+$font-avantgarde-path: "./avantgarde-book.ttf" !default;
+$font-avantgarde-bold-path: "./avantgarde-book-bold.ttf" !default;
+
+$slick-prev-character: "";
+$slick-next-character: "";
+$font-avantgarde-path: "{{ 'avantgarde-book.ttf' | asset_url }}";
+$font-avantgarde-bold-path: "{{ 'avantgarde-book-bold.ttf' | asset_url }}";
+
+$slick-prev-character: url({{ 'arrow-big-l.svg' | asset_url }});
+$slick-next-character: url({{ 'arrow-big-r.svg' | asset_url }});
 .no-select {
   @include vp-user-select(none);
 }
@@ -10758,7 +10786,7 @@ $tcon-menu-arrow360left-transformation: (
 }
 
 .border-color-black {
-  border-color: $white;
+  border-color: $black;
 }
 .border-color-gray-dark {
   border-color: $gray-dark;
@@ -10858,6 +10886,9 @@ $tcon-menu-arrow360left-transformation: (
   &.ratio-3-4 {
     padding-top: 125%;
   }
+  &.ratio-3-10 {
+    padding-top: 30%;
+  }
 
   &.full-viewport-height {
     padding-top: 0;
@@ -10889,8 +10920,9 @@ $tcon-menu-arrow360left-transformation: (
   &.ratio-1-1:before {
     padding-top: 100%;
   }
-
-  /* Other ratios */
+  &.ratio-2-3:before {
+    padding-top: 150%;
+  }
   &.ratio-2-1:before {
     padding-top: 50%;
   }
@@ -10906,8 +10938,11 @@ $tcon-menu-arrow360left-transformation: (
   &.ratio-16-9:before {
     padding-top: 56.25%;
   }
-  &.ratio-2-3:before {
-    padding-top: 150%;
+  &.ratio-3-4:before {
+    padding-top: 125%;
+  }
+  &.ratio-3-10:before {
+    padding-top: 30%;
   }
 }
 // https://v4-alpha.getbootstrap.com/utilities/sizing-and-positioning/
@@ -10992,19 +11027,394 @@ $tcon-menu-arrow360left-transformation: (
     }
 }
 
+// carousel caption text positions
+.carousel-caption {
+  &.top {
+    top: 0;
+    padding-top: 0;
+  }
+  &.middle {
+    // https://css-tricks.com/snippets/css/a-guide-to-flexbox/
+    @include vp-flexbox();
+    @include vp-flex-direction(column);
+    @include vp-justify-content(center);
+    bottom: 0;
+    top: 0;
+    height: 100%;
+  }
+  &.bottom {
+    bottom: 0;
+    padding-bottom: 0;
+  }
+  &.left {
+    left: 0;
+    right: initial;
+  }
+  &.center {
+    left: 0;
+    right: 0;
+    text-align: center;
+    margin: auto;
+  }
+  &.right {
+    left: initial;
+    right: 0;
+  }
+
+  @include vp-flexbox();
+}
+
+// slick extensions
+.slick-dots {
+    li {
+        button {
+            &:before {
+                content: $slick-dot-character;
+            }
+            &:hover {
+                &:before {
+                    content: $slick-active-dot-character;
+                }
+            }
+        }
+        &.slick-active {
+            button {
+                &:before {
+                    content: $slick-active-dot-character;
+                }
+            }
+        }
+    }
+}
+
+.slick-dots-vertical {
+    display: block;
+    top: 0;
+    left: 0;
+    width: 50px;
+}
+
+.slick-prev,
+.slick-next {
+    &:hover, &:focus {
+        &:before {
+            opacity: $slick-arrow-opacity-on-hover;
+        }
+    }
+    &.slick-disabled:before {
+        opacity: $slick-arrow-opacity-disabled;
+    }
+}
+/* Slider */
+
+.slick-slider {
+    position: relative;
+    display: block;
+    box-sizing: border-box;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    -ms-touch-action: pan-y;
+    touch-action: pan-y;
+    -webkit-tap-highlight-color: transparent;
+}
+.slick-list {
+    position: relative;
+    overflow: hidden;
+    display: block;
+    margin: 0;
+    padding: 0;
+
+    &:focus {
+        outline: none;
+    }
+
+    &.dragging {
+        cursor: pointer;
+        cursor: hand;
+    }
+}
+.slick-slider .slick-track,
+.slick-slider .slick-list {
+    -webkit-transform: translate3d(0, 0, 0);
+    -moz-transform: translate3d(0, 0, 0);
+    -ms-transform: translate3d(0, 0, 0);
+    -o-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+}
+
+.slick-track {
+    position: relative;
+    left: 0;
+    top: 0;
+    display: block;
+
+    &:before,
+    &:after {
+        content: "";
+        display: table;
+    }
+
+    &:after {
+        clear: both;
+    }
+
+    .slick-loading & {
+        visibility: hidden;
+    }
+}
+.slick-slide {
+    float: left;
+    height: 100%;
+    min-height: 1px;
+    [dir="rtl"] & {
+        float: right;
+    }
+    img {
+        display: block;
+    }
+    &.slick-loading img {
+        display: none;
+    }
+
+    display: none;
+
+    &.dragging img {
+        pointer-events: none;
+    }
+
+    .slick-initialized & {
+        display: block;
+    }
+
+    .slick-loading & {
+        visibility: hidden;
+    }
+
+    .slick-vertical & {
+        display: block;
+        height: auto;
+        border: 1px solid transparent;
+    }
+}
+.slick-arrow.slick-hidden {
+    display: none;
+}
+
+@charset "UTF-8";
+
+// Default Variables
+
+// Slick icon entity codes outputs the following
+// "\2190" outputs ascii character "←"
+// "\2192" outputs ascii character "→"
+// "\2022" outputs ascii character "•"
+
+$slick-font-path: "./fonts/" !default;
+$slick-font-family: "slick" !default;
+$slick-loader-path: "./" !default;
+$slick-arrow-color: white !default;
+$slick-dot-color: black !default;
+$slick-dot-color-active: $slick-dot-color !default;
+$slick-prev-character: "\2190" !default;
+$slick-next-character: "\2192" !default;
+$slick-dot-character: "\2022" !default;
+$slick-dot-size: 6px !default;
+$slick-opacity-default: 0.75 !default;
+$slick-opacity-on-hover: 1 !default;
+$slick-opacity-not-active: 0.25 !default;
+
+@function slick-image-url($url) {
+    @if function-exists(image-url) {
+        @return image-url($url);
+    }
+    @else {
+        @return url($slick-loader-path + $url);
+    }
+}
+
+@function slick-font-url($url) {
+    @if function-exists(font-url) {
+        @return font-url($url);
+    }
+    @else {
+        @return url($slick-font-path + $url);
+    }
+}
+
+/* Slider */
+
+.slick-list {
+    .slick-loading & {
+        background: #fff slick-image-url("ajax-loader.gif") center center no-repeat;
+    }
+}
+
+/* Icons */
+@if $slick-font-family == "slick" {
+    @font-face {
+        font-family: "slick";
+        src: slick-font-url("slick.eot");
+        src: slick-font-url("slick.eot?#iefix") format("embedded-opentype"), slick-font-url("slick.woff") format("woff"), slick-font-url("slick.ttf") format("truetype"), slick-font-url("slick.svg#slick") format("svg");
+        font-weight: normal;
+        font-style: normal;
+    }
+}
+
+/* Arrows */
+
+.slick-prev,
+.slick-next {
+    position: absolute;
+    display: block;
+    height: 20px;
+    width: 20px;
+    line-height: 0px;
+    font-size: 0px;
+    cursor: pointer;
+    background: transparent;
+    color: transparent;
+    top: 50%;
+    -webkit-transform: translate(0, -50%);
+    -ms-transform: translate(0, -50%);
+    transform: translate(0, -50%);
+    padding: 0;
+    border: none;
+    outline: none;
+    &:hover, &:focus {
+        outline: none;
+        background: transparent;
+        color: transparent;
+        &:before {
+            opacity: $slick-opacity-on-hover;
+        }
+    }
+    &.slick-disabled:before {
+        opacity: $slick-opacity-not-active;
+    }
+    &:before {
+        font-family: $slick-font-family;
+        font-size: 20px;
+        line-height: 1;
+        color: $slick-arrow-color;
+        opacity: $slick-opacity-default;
+        -webkit-font-smoothing: antialiased;
+        -moz-osx-font-smoothing: grayscale;
+    }
+}
+
+.slick-prev {
+    left: -25px;
+    [dir="rtl"] & {
+        left: auto;
+        right: -25px;
+    }
+    &:before {
+        content: $slick-prev-character;
+        [dir="rtl"] & {
+            content: $slick-next-character;
+        }
+    }
+}
+
+.slick-next {
+    right: -25px;
+    [dir="rtl"] & {
+        left: -25px;
+        right: auto;
+    }
+    &:before {
+        content: $slick-next-character;
+        [dir="rtl"] & {
+            content: $slick-prev-character;
+        }
+    }
+}
+
+/* Dots */
+
+.slick-dotted.slick-slider {
+    margin-bottom: 30px;
+}
+
+.slick-dots {
+    position: absolute;
+    bottom: -25px;
+    list-style: none;
+    display: block;
+    text-align: center;
+    padding: 0;
+    margin: 0;
+    width: 100%;
+    li {
+        position: relative;
+        display: inline-block;
+        height: 20px;
+        width: 20px;
+        margin: 0 5px;
+        padding: 0;
+        cursor: pointer;
+        button {
+            border: 0;
+            background: transparent;
+            display: block;
+            height: 20px;
+            width: 20px;
+            outline: none;
+            line-height: 0px;
+            font-size: 0px;
+            color: transparent;
+            padding: 5px;
+            cursor: pointer;
+            &:hover, &:focus {
+                outline: none;
+                &:before {
+                    opacity: $slick-opacity-on-hover;
+                }
+            }
+            &:before {
+                position: absolute;
+                top: 0;
+                left: 0;
+                content: $slick-dot-character;
+                width: 20px;
+                height: 20px;
+                font-family: $slick-font-family;
+                font-size: $slick-dot-size;
+                line-height: 20px;
+                text-align: center;
+                color: $slick-dot-color;
+                opacity: $slick-opacity-not-active;
+                -webkit-font-smoothing: antialiased;
+                -moz-osx-font-smoothing: grayscale;
+            }
+        }
+        &.slick-active button:before {
+            color: $slick-dot-color-active;
+            opacity: $slick-opacity-default;
+        }
+    }
+}
+
 html, body {
     height: 100%;
 }
 @font-face {
     font-family: "Avant Garde";
-    src: url("{{ 'avantgarde-book.ttf' | asset_url }}") format('truetype');
+    src: url(#{$font-avantgarde-path}) format('truetype');
 }
 
 @font-face {
     font-family: "Avant Garde";
-    src: url("{{ 'avantgarde-book-bold.ttf' | asset_url }}") format('truetype');
+    src: url(#{$font-avantgarde-bold-path}) format('truetype');
     font-weight: bold;
 }
+
+$slick-prev-character: ""; // $fa-var-chevron-left; // "←" !default;
+$slick-next-character: "{% include 'iconset', name: 'arrow', direction: 'top', color: 'white' %}"; // "→"
 #main-navbar {
     .nav-item {
         .nav-link {
@@ -11104,6 +11514,17 @@ html, body {
 
 #footer-book {
     //transition: margin 0.25s ease-in;
-    margin: 0.25rem 0;
+    margin: 4px 0;
     cursor: pointer;
+}
+.display-3, .display-4 {
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+}
+
+.display-3 {
+    letter-spacing: 0.3rem;
+}
+.btn {
+    text-transform: uppercase;
 }
