--- a/src/scss/_variables.scss.liquid
+++ b/src/scss/_variables.scss.liquid
@@ -1,5 +1,12 @@
-$font-avantgarde-path: "{{ 'avantgarde-book.ttf' | asset_url }}";
-$font-avantgarde-bold-path: "{{ 'avantgarde-book-bold.ttf' | asset_url }}";
+$font-avantgarde-eot-path: "{{ 'avantgarde-book.eot' | asset_url }}";
+$font-avantgarde-woff-path: "{{ 'avantgarde-book.woff' | asset_url }}";
+$font-avantgarde-ttf-path: "{{ 'avantgarde-book.ttf' | asset_url }}";
+$font-avantgarde-svg-path: "{{ 'avantgarde-book.svg' | asset_url }}";
+
+$font-avantgarde-bold-eot-path: "{{ 'avantgarde-book-bold.eot' | asset_url }}";
+$font-avantgarde-bold-woff-path: "{{ 'avantgarde-book-bold.woff' | asset_url }}";
+$font-avantgarde-bold-ttf-path: "{{ 'avantgarde-book-bold.ttf' | asset_url }}";
+$font-avantgarde-bold-svg-path: "{{ 'avantgarde-book-bold.svg' | asset_url }}";
 
 $slick-prev-character: url({{ 'arrow-big-l.svg' | asset_url }});
 $slick-next-character: url({{ 'arrow-big-r.svg' | asset_url }});
