--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,5 +1,13 @@
-$font-avantgarde-path: "./avantgarde-book.ttf" !default;
-$font-avantgarde-bold-path: "./avantgarde-book-bold.ttf" !default;
+$font-avantgarde-eot-path: "./avantgarde-book.eot" !default;
+$font-avantgarde-woff-path: "./avantgarde-book.woff" !default;
+$font-avantgarde-ttf-path: "./avantgarde-book.ttf" !default;
+$font-avantgarde-svg-path: "./avantgarde-book.svg" !default;
+
+$font-avantgarde-bold-eot-path: "./avantgarde-book-bold.eot" !default;
+$font-avantgarde-bold-woff-path: "./avantgarde-book-bold.woff" !default;
+$font-avantgarde-bold-ttf-path: "./avantgarde-book-bold.ttf" !default;
+$font-avantgarde-bold-svg-path: "./avantgarde-book-bold.svg" !default;
+
 
 $slick-prev-character: "";
 $slick-next-character: "";
