--- a/theme/assets/theme.scss.liquid
+++ b/theme/assets/theme.scss.liquid
@@ -11654,7 +11654,7 @@ b, strong {
     text-transform: uppercase;
 }
 [data-namespace="customers-register"], [data-namespace="customers-login"] {
-    .form-group, h1 {
+    .form-group, .btn-group, h1 {
         max-width: 360px;
         margin-left: auto;
         margin-right: auto;
