--- a/src/scss/_customers-login-register.scss
+++ b/src/scss/_customers-login-register.scss
@@ -1,5 +1,5 @@
 [data-namespace="customers-register"], [data-namespace="customers-login"] {
-    .form-group, h1 {
+    .form-group, .btn-group, h1 {
         max-width: 360px;
         margin-left: auto;
         margin-right: auto;
