--- a/theme/snippets/jumplink-login.liquid
+++ b/theme/snippets/jumplink-login.liquid
@@ -21,7 +21,7 @@
     <div class="bg-gray-lightest">
         <div class="container py-5">
             <div class="row">
-                <div class="col-xs-12" id="CustomerLoginForm">
+                <div class="col-xs-12 text-center" id="CustomerLoginForm">
 
                     {% form 'customer_login' %}
 
@@ -33,7 +33,7 @@
 
                         {% if form.errors %}
                             <p>
-                                <a href="#recover" class="RecoverPassword">{{ 'customer.login.forgot_password' | t }}?</a>
+                                <a href="#recover" class="RecoverPassword">{{ 'customer.login.forgot_password' | t }}</a>
                             </p>
                         {% endif %}
 
@@ -62,7 +62,7 @@
                     {% endform %}
                 </div>
 
-                <div id="RecoverPasswordForm" style="display: none;">
+                <div class="col-xs-12 text-center" id="RecoverPasswordForm" style="display: none;">
 
                     <h2>{{ 'customer.recover_password.title' | t }}</h2>
                     <p>{{ 'customer.recover_password.subtext' | t }}</p>
@@ -85,10 +85,10 @@
                             <input type="email" value="" name="email" id="RecoverEmail" class="form-control form-control-warning border-brand-warning" placeholder="{{ 'customer.recover_password.email' | t }}" autocorrect="off" autocapitalize="off">
                         </div>
 
-                        <p>
+                        <div class="btn-group d-flex justify-content-center" role="group" aria-label="Basic example">
                             <input type="submit" class="btn btn-primary" value="{{ 'customer.recover_password.submit' | t }}">
-                            <button type="button" id="HideRecoverPasswordLink" class="btn btn-danger">{{ 'customer.recover_password.cancel' | t }}</button>
-                        </p>
+                            <button type="button" id="HideRecoverPasswordLink" class="btn btn-secondary border-px-0">{{ 'customer.recover_password.cancel' | t }}</button>
+                        </div>
                     
                     {% endform %}
 
