--- a/theme/templates/page.carousel.liquid
+++ b/theme/templates/page.carousel.liquid
@@ -6,14 +6,12 @@
     <div class="col-xs-12">
       <h1 class="display-4">{{ page.title }}</h1>
     </div>
+
     <div class="col-xs-12 col-md-8 offset-md-2 rte">
       {{ page.content }}
-
-      <div class="border-a border-px-1 border-color-black py-5 my-5">
-        <p class="display-3 mb-4">ONLINE SHOWROOM</p>
-        <a href="/account/register" class="btn btn-primary mb-4">Register</a>
-      </div>
-
     </div>
+    
+    {% include 'jumplink-register-box' %}
+
   </div>
 </div>
